Fix bug where navigation jumped up and down, and make scrolling smoother

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -266,4 +266,10 @@
       .triangle(right, @triangle-side-length, @equilateral-triangle-height, @breadcrumb-bg);
     }
   }
+
+  &.affix + .id7-navigation-marker {
+    display: block;
+  }
 }
+
+.id7-navigation-marker { display: none; }
